fix post page title

--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 
 {% block title %}
     <title>
-            Posts tagged in {{tag}}
+            {{post.title}} - {{site.title}}
     </title>
 {% endblock %}
 
